--- a/MODUL 1 - Dasar-Dasar Python untuk Sains Data/unguided.ipynb
+++ b/MODUL 1 - Dasar-Dasar Python untuk Sains Data/unguided.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Buatlah program yang dapat menghasilkan pola berbentuk angka seperti di bawah ini, dengan syarat angka yang ditampilkan adalah hasil dari penjumlahan bilangan prima sebelumnya:\n",
+    "1. Buatlah program yang dapat menghasilkan pola berbentuk angka seperti di bawah ini, dengan syarat angka yang ditampilkan adalah hasil dari penjumlahan bilangan prima sebelumnya:\n",
     "\n",
     "```\n",
     "1\n",
@@ -54,7 +54,7 @@
     "    return primes\n",
     "\n",
     "def generate_pattern(rows):\n",
-    "    \"\"\"Fungsi untuk menghasilkan pola segitiga bilangan prima.\"\"\"\n",
+    "    # menghasilkan pola segitiga bilangan prima\n",
     "    primes = generate_primes(rows * (rows + 1) // 2)  \n",
     "    index = 0\n",
     "    for i in range(1, rows + 1):  \n",
@@ -75,25 +75,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Buatlah sebuah fungsi yang menerima dua input berupa list angka. Fungsi ini harus mengembalikan sebuah list baru yang berisi elemen dari dua list input yang memiliki indeks ganjil. List baru tersebut juga harus diurutkan secara menurun berdasarkan nilai elemen."
+    "2. Buatlah sebuah fungsi yang menerima dua input berupa list angka. Fungsi ini harus mengembalikan sebuah list baru yang berisi elemen dari dua list input yang memiliki indeks ganjil. List baru tersebut juga harus diurutkan secara menurun berdasarkan nilai elemen."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[62, 60, 47, 42, 28, 21]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def gabung_indeks(list1, list2):\n",
+    "    # ambil elemen dengan indeks ganjil dari kedua list\n",
+    "    list_ganjil_1 = [list1[i] for i in range(1, len(list1), 2)]\n",
+    "    list_ganjil_2 = [list2[i] for i in range(1, len(list2), 2)]\n",
+    "\n",
+    "    # gabungkan kedua list\n",
+    "    list_gabung = list_ganjil_1 + list_ganjil_2\n",
+    "\n",
+    "    # urutkan list secara menurun\n",
+    "    list_gabung.sort(reverse=True)\n",
+    "\n",
+    "    return list_gabung\n",
+    "\n",
+    "# contoh penggunaan\n",
+    "list_a = [10, 21, 34, 47, 53, 62]\n",
+    "list_b = [15, 28, 39, 42, 55, 60]\n",
+    "\n",
+    "hasil = gabung_indeks(list_a, list_b)\n",
+    "print(hasil)\n"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Buat sebuah program untuk mensimulasikan transaksi ATM. Program harus:\n",
-    "1. Meminta pengguna memasukkan PIN (dibatasi 3 kali percobaan).\n",
-    "2. Setelah PIN benar, meminta jumlah penarikan.\n",
-    "3. Jika saldo kurang dari jumlah yang ditarik, munculkan pesan kesalahan.\n",
-    "4. Jika penarikan berhasil, tampilkan saldo akhir."
+    "3. Buat sebuah program untuk mensimulasikan transaksi ATM. Program harus:\n",
+    "    \n",
+    "    1. Meminta pengguna memasukkan PIN (dibatasi 3 kali percobaan).\n",
+    "\n",
+    "    2. Setelah PIN benar, meminta jumlah penarikan.\n",
+    "\n",
+    "    3. Jika saldo kurang dari jumlah yang ditarik, munculkan pesan kesalahan.\n",
+    "    \n",
+    "    4. Jika penarikan berhasil, tampilkan saldo akhir."
    ]
   },
   {
@@ -145,24 +177,69 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Anda diberikan file CSV berisi data nilai ujian mahasiswa. Tugas Anda adalah menulis sebuah program yang:\n",
-    "1. Membaca file CSV dan menyimpan datanya ke dalam dictionary.\n",
-    "2. Menghitung rata-rata nilai tiap mahasiswa.\n",
-    "3. Menampilkan mahasiswa dengan nilai tertinggi dan terendah."
+    "4. Anda diberikan file CSV berisi data nilai ujian mahasiswa. Tugas Anda adalah menulis sebuah program yang:\n",
+    "    1. Membaca file CSV dan menyimpan datanya ke dalam dictionary.\n",
+    "    2. Menghitung rata-rata nilai tiap mahasiswa.\n",
+    "    3. Menampilkan mahasiswa dengan nilai tertinggi dan terendah."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pandas'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[8], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21manalisis_nilai\u001b[39m(file_csv):\n\u001b[0;32m      4\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;124;03m    Fungsi untuk menganalisis data nilai mahasiswa dari file CSV.\u001b[39;00m\n\u001b[0;32m      6\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;124;03m        None\u001b[39;00m\n\u001b[0;32m     12\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "def analisis_nilai(file_csv):\n",
+    "    \"\"\"\n",
+    "    Fungsi untuk menganalisis data nilai mahasiswa dari file CSV.\n",
+    "\n",
+    "    Args:\n",
+    "        file_csv (str): Nama file CSV yang akan dibaca.\n",
+    "\n",
+    "    Returns:\n",
+    "        None\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Membaca file CSV ke dalam DataFrame\n",
+    "    df = pd.read_csv(file_csv)\n",
+    "\n",
+    "    # Menghitung rata-rata nilai tiap mahasiswa\n",
+    "    df['rata_rata'] = df.mean(axis=1)\n",
+    "\n",
+    "    # Mencari mahasiswa dengan nilai tertinggi\n",
+    "    mahasiswa_tertinggi = df.loc[df['rata_rata'].idxmax()]\n",
+    "    print(\"Mahasiswa dengan nilai tertinggi:\")\n",
+    "    print(mahasiswa_tertinggi)\n",
+    "\n",
+    "    # Mencari mahasiswa dengan nilai terendah\n",
+    "    mahasiswa_terendah = df.loc[df['rata_rata'].idxmin()]\n",
+    "    print(\"\\nMahasiswa dengan nilai terendah:\")\n",
+    "    print(mahasiswa_terendah)\n",
+    "\n",
+    "# Contoh penggunaan\n",
+    "file_csv = \"nilai_mahasiswa.csv\"\n",
+    "analisis_nilai(file_csv)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Buatlah permainan sederhana menggunakan Python, di mana komputer akan memilih sebuah angka secara acak antara 1 hingga 100, dan pengguna harus menebak angka tersebut. Setiap tebakan yang salah akan memberikan petunjuk apakah angka yang ditebak lebih besar atau lebih kecil dari angka sebenarnya. Batasi jumlah percobaan menjadi 5 kali. Setelah permainan selesai, tampilkan apakah pemain menang atau kalah."
+    "5. Buatlah permainan sederhana menggunakan Python, di mana komputer akan memilih sebuah angka secara acak antara 1 hingga 100, dan pengguna harus menebak angka tersebut. Setiap tebakan yang salah akan memberikan petunjuk apakah angka yang ditebak lebih besar atau lebih kecil dari angka sebenarnya. Batasi jumlah percobaan menjadi 5 kali. Setelah permainan selesai, tampilkan apakah pemain menang atau kalah."
    ]
   },
   {
@@ -238,7 +315,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Buat fungsi rekursif yang menerima input bilangan bulat `n` dan menghasilkan urutan bilangan seperti berikut ini:\n",
+    "6. Buat fungsi rekursif yang menerima input bilangan bulat `n` dan menghasilkan urutan bilangan seperti berikut ini:\n",
     "```\n",
     "Input: n = 4\n",
     "Output: 1, 1, 2, 6, 24\n",
@@ -286,7 +363,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Buatlah program untuk memecahkan masalah \"minimum coin change\". Diberikan jumlah uang dan daftar nilai koin yang tersedia (misalnya, 1, 5, 10, 25), tentukan kombinasi minimum koin yang diperlukan untuk mencapai jumlah uang tersebut. Namun, program Anda harus bisa menangani koin-koin yang nilai dan jumlahnya ditentukan pengguna."
+    "7. Buatlah program untuk memecahkan masalah \"minimum coin change\". Diberikan jumlah uang dan daftar nilai koin yang tersedia (misalnya, 1, 5, 10, 25), tentukan kombinasi minimum koin yang diperlukan untuk mencapai jumlah uang tersebut. Namun, program Anda harus bisa menangani koin-koin yang nilai dan jumlahnya ditentukan pengguna."
    ]
   },
   {
@@ -340,7 +417,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Buat sebuah program yang menerima string dari pengguna dan mengonversi string tersebut menjadi sebuah list berisi kata-kata terbalik. Misalnya:\n",
+    "8. Buat sebuah program yang menerima string dari pengguna dan mengonversi string tersebut menjadi sebuah list berisi kata-kata terbalik. Misalnya:\n",
     "```\n",
     "Input: \"Saya suka Python\"\n",
     "Output: [\"ayaS\", \"akus\", \"nohtyP\"]\n",
@@ -384,21 +461,77 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Buat class bernama `Buku` yang memiliki atribut `judul`, `penulis`, dan `tahun_terbit`. Buat method dalam class untuk menampilkan informasi buku, serta method untuk menghitung usia buku berdasarkan tahun saat ini. Buatlah 3 objek dari class `Buku` dan tampilkan informasi serta usia masing-masing buku."
+    "9. Buat class bernama `Buku` yang memiliki atribut `judul`, `penulis`, dan `tahun_terbit`. Buat method dalam class untuk menampilkan informasi buku, serta method untuk menghitung usia buku berdasarkan tahun saat ini. Buatlah 3 objek dari class `Buku` dan tampilkan informasi serta usia masing-masing buku."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Judul: Harry Potter dan Batu Bertuah\n",
+      "Penulis: J.K. Rowling\n",
+      "Tahun Terbit: 1997\n",
+      "Usia Buku: 27 tahun\n",
+      "\n",
+      "Judul: The Great Dinosaurs\n",
+      "Penulis: Bambang\n",
+      "Tahun Terbit: 2005\n",
+      "Usia Buku: 19 tahun\n",
+      "\n",
+      "Judul: 1715\n",
+      "Penulis: Orel\n",
+      "Tahun Terbit: 1760\n",
+      "Usia Buku: 264 tahun\n",
+      "\n",
+      "Judul: Cara membuat cilok\n",
+      "Penulis: Mursid\n",
+      "Tahun Terbit: 2015\n",
+      "Usia Buku: 9 tahun\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Buku:\n",
+    "    def __init__(self, judul, penulis, tahun_terbit):\n",
+    "        self.judul = judul\n",
+    "        self.penulis = penulis\n",
+    "        self.tahun_terbit = tahun_terbit\n",
+    "\n",
+    "    def tampilkan_informasi(self):\n",
+    "        print(f\"Judul: {self.judul}\")\n",
+    "        print(f\"Penulis: {self.penulis}\")\n",
+    "        print(f\"Tahun Terbit: {self.tahun_terbit}\")\n",
+    "\n",
+    "    def hitung_usia(self, tahun_sekarang):\n",
+    "        return tahun_sekarang - self.tahun_terbit\n",
+    "\n",
+    "# Membuat objek Buku\n",
+    "buku1 = Buku(\"Harry Potter dan Batu Bertuah\", \"J.K. Rowling\", 1997)\n",
+    "buku2 = Buku(\"The Great Dinosaurs\", \"Bambang\", 2005)\n",
+    "buku3 = Buku(\"1715\", \"Orel\", 1760)\n",
+    "buku4 = Buku(\"Cara membuat cilok\", \"Mursid\", 2015)\n",
+    "\n",
+    "# Tahun saat ini\n",
+    "tahun_sekarang = 2024\n",
+    "\n",
+    "# Menampilkan informasi dan usia masing-masing buku\n",
+    "for buku in [buku1, buku2, buku3, buku4]:\n",
+    "    buku.tampilkan_informasi()\n",
+    "    usia = buku.hitung_usia(tahun_sekarang)\n",
+    "    print(f\"Usia Buku: {usia} tahun\\n\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Buatlah program yang mengimplementasikan algoritma pencarian biner, namun dengan modifikasi: algoritma harus bisa mencari nilai di list yang hanya berisi angka genap, dan jika nilai yang dicari adalah angka ganjil, program harus menampilkan pesan bahwa nilai tersebut tidak bisa ditemukan."
+    "10. Buatlah program yang mengimplementasikan algoritma pencarian biner, namun dengan modifikasi: algoritma harus bisa mencari nilai di list yang hanya berisi angka genap, dan jika nilai yang dicari adalah angka ganjil, program harus menampilkan pesan bahwa nilai tersebut tidak bisa ditemukan."
    ]
   },
   {
