--- a/MODUL 1 - Dasar-Dasar Python untuk Sains Data/unguided.ipynb
+++ b/MODUL 1 - Dasar-Dasar Python untuk Sains Data/unguided.ipynb
@@ -185,54 +185,166 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pandas'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[8], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21manalisis_nilai\u001b[39m(file_csv):\n\u001b[0;32m      4\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;124;03m    Fungsi untuk menganalisis data nilai mahasiswa dari file CSV.\u001b[39;00m\n\u001b[0;32m      6\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;124;03m        None\u001b[39;00m\n\u001b[0;32m     12\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rata-rata nilai tiap mahasiswa:\n",
+      "Siswa_1: 59.00\n",
+      "Siswa_2: 79.00\n",
+      "Siswa_3: 61.00\n",
+      "Siswa_4: 74.00\n",
+      "Siswa_5: 50.00\n",
+      "Siswa_6: 70.00\n",
+      "Siswa_7: 100.00\n",
+      "Siswa_8: 84.00\n",
+      "Siswa_9: 78.00\n",
+      "Siswa_10: 61.00\n",
+      "Siswa_11: 92.00\n",
+      "Siswa_12: 60.00\n",
+      "Siswa_13: 78.00\n",
+      "Siswa_14: 87.00\n",
+      "Siswa_15: 57.00\n",
+      "Siswa_16: 73.00\n",
+      "Siswa_17: 53.00\n",
+      "Siswa_18: 54.00\n",
+      "Siswa_19: 97.00\n",
+      "Siswa_20: 52.00\n",
+      "Siswa_21: 84.00\n",
+      "Siswa_22: 89.00\n",
+      "Siswa_23: 52.00\n",
+      "Siswa_24: 90.00\n",
+      "Siswa_25: 52.00\n",
+      "Siswa_26: 64.00\n",
+      "Siswa_27: 96.00\n",
+      "Siswa_28: 100.00\n",
+      "Siswa_29: 84.00\n",
+      "Siswa_30: 60.00\n",
+      "Siswa_31: 85.00\n",
+      "Siswa_32: 63.00\n",
+      "Siswa_33: 64.00\n",
+      "Siswa_34: 68.00\n",
+      "Siswa_35: 67.00\n",
+      "Siswa_36: 52.00\n",
+      "Siswa_37: 79.00\n",
+      "Siswa_38: 55.00\n",
+      "Siswa_39: 88.00\n",
+      "Siswa_40: 95.00\n",
+      "Siswa_41: 78.00\n",
+      "Siswa_42: 66.00\n",
+      "Siswa_43: 71.00\n",
+      "Siswa_44: 64.00\n",
+      "Siswa_45: 51.00\n",
+      "Siswa_46: 77.00\n",
+      "Siswa_47: 90.00\n",
+      "Siswa_48: 83.00\n",
+      "Siswa_49: 99.00\n",
+      "Siswa_50: 56.00\n",
+      "Siswa_51: 68.00\n",
+      "Siswa_52: 88.00\n",
+      "Siswa_53: 62.00\n",
+      "Siswa_54: 98.00\n",
+      "Siswa_55: 58.00\n",
+      "Siswa_56: 92.00\n",
+      "Siswa_57: 60.00\n",
+      "Siswa_58: 55.00\n",
+      "Siswa_59: 93.00\n",
+      "Siswa_60: 60.00\n",
+      "Siswa_61: 53.00\n",
+      "Siswa_62: 79.00\n",
+      "Siswa_63: 75.00\n",
+      "Siswa_64: 83.00\n",
+      "Siswa_65: 58.00\n",
+      "Siswa_66: 50.00\n",
+      "Siswa_67: 75.00\n",
+      "Siswa_68: 61.00\n",
+      "Siswa_69: 57.00\n",
+      "Siswa_70: 98.00\n",
+      "Siswa_71: 85.00\n",
+      "Siswa_72: 57.00\n",
+      "Siswa_73: 53.00\n",
+      "Siswa_74: 55.00\n",
+      "Siswa_75: 54.00\n",
+      "Siswa_76: 64.00\n",
+      "Siswa_77: 51.00\n",
+      "Siswa_78: 65.00\n",
+      "Siswa_79: 68.00\n",
+      "Siswa_80: 51.00\n",
+      "Siswa_81: 99.00\n",
+      "Siswa_82: 89.00\n",
+      "Siswa_83: 92.00\n",
+      "Siswa_84: 56.00\n",
+      "Siswa_85: 96.00\n",
+      "Siswa_86: 79.00\n",
+      "Siswa_87: 76.00\n",
+      "Siswa_88: 71.00\n",
+      "Siswa_89: 98.00\n",
+      "Siswa_90: 89.00\n",
+      "Siswa_91: 92.00\n",
+      "Siswa_92: 65.00\n",
+      "Siswa_93: 50.00\n",
+      "Siswa_94: 84.00\n",
+      "Siswa_95: 67.00\n",
+      "Siswa_96: 59.00\n",
+      "Siswa_97: 57.00\n",
+      "Siswa_98: 70.00\n",
+      "Siswa_99: 66.00\n",
+      "Siswa_100: 78.00\n",
+      "\n",
+      "Mahasiswa dengan nilai tertinggi: Siswa_7 (100.00)\n",
+      "Mahasiswa dengan nilai terendah: Siswa_5 (50.00)\n"
      ]
     }
    ],
    "source": [
-    "import pandas as pd\n",
+    "import csv\n",
     "\n",
-    "def analisis_nilai(file_csv):\n",
-    "    \"\"\"\n",
-    "    Fungsi untuk menganalisis data nilai mahasiswa dari file CSV.\n",
+    "# baca file CSV dan menyimpan data ke dalam dictionary\n",
+    "def baca_csv(nama_file):\n",
+    "    data_mahasiswa = {}\n",
+    "    with open(nama_file, mode='r') as file:\n",
+    "        csv_reader = csv.reader(file)\n",
+    "        header = next(csv_reader)\n",
+    "        for row in csv_reader:\n",
+    "            nama = row[0]\n",
+    "            nilai = list(map(float, row[1:]))\n",
+    "            data_mahasiswa[nama] = nilai\n",
+    "    return data_mahasiswa\n",
     "\n",
-    "    Args:\n",
-    "        file_csv (str): Nama file CSV yang akan dibaca.\n",
+    "# hitung rata-rata nilai tiap mahasiswa\n",
+    "def hitung_rata_rata(data_mahasiswa):\n",
+    "    rata_rata = {}\n",
+    "    for nama, nilai in data_mahasiswa.items():\n",
+    "        rata_rata[nama] = sum(nilai) / len(nilai)\n",
+    "    return rata_rata\n",
     "\n",
-    "    Returns:\n",
-    "        None\n",
-    "    \"\"\"\n",
+    "#  menemukan mahasiswa dengan nilai tertinggi dan terendah\n",
+    "def nilai_ekstrem(rata_rata):\n",
+    "    mahasiswa_tertinggi = max(rata_rata, key=rata_rata.get)\n",
+    "    mahasiswa_terendah = min(rata_rata, key=rata_rata.get)\n",
+    "    return mahasiswa_tertinggi, mahasiswa_terendah\n",
     "\n",
-    "    # Membaca file CSV ke dalam DataFrame\n",
-    "    df = pd.read_csv(file_csv)\n",
+    "# fungsi utama\n",
+    "def main(nama_file):\n",
+    "    data_mahasiswa = baca_csv(nama_file)\n",
+    "    rata_rata = hitung_rata_rata(data_mahasiswa)\n",
+    "    \n",
+    "    # menampilkan rata-rata nilai tiap mahasiswa\n",
+    "    print(\"Rata-rata nilai tiap mahasiswa:\")\n",
+    "    for nama, rata in rata_rata.items():\n",
+    "        print(f\"{nama}: {rata:.2f}\")\n",
+    "    \n",
+    "    # menampilkan mahasiswa dengan nilai tertinggi dan terendah\n",
+    "    tertinggi, terendah = nilai_ekstrem(rata_rata)\n",
+    "    print(f\"\\nMahasiswa dengan nilai tertinggi: {tertinggi} ({rata_rata[tertinggi]:.2f})\")\n",
+    "    print(f\"Mahasiswa dengan nilai terendah: {terendah} ({rata_rata[terendah]:.2f})\")\n",
     "\n",
-    "    # Menghitung rata-rata nilai tiap mahasiswa\n",
-    "    df['rata_rata'] = df.mean(axis=1)\n",
-    "\n",
-    "    # Mencari mahasiswa dengan nilai tertinggi\n",
-    "    mahasiswa_tertinggi = df.loc[df['rata_rata'].idxmax()]\n",
-    "    print(\"Mahasiswa dengan nilai tertinggi:\")\n",
-    "    print(mahasiswa_tertinggi)\n",
-    "\n",
-    "    # Mencari mahasiswa dengan nilai terendah\n",
-    "    mahasiswa_terendah = df.loc[df['rata_rata'].idxmin()]\n",
-    "    print(\"\\nMahasiswa dengan nilai terendah:\")\n",
-    "    print(mahasiswa_terendah)\n",
-    "\n",
-    "# Contoh penggunaan\n",
-    "file_csv = \"nilai_mahasiswa.csv\"\n",
-    "analisis_nilai(file_csv)"
+    "if __name__ == \"__main__\":\n",
+    "    nama_file = 'siswa_nilai.csv'\n",
+    "    main(nama_file)\n"
    ]
   },
   {
@@ -368,14 +480,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Jumlah koin minimum yang diperlukan: 1\n"
+      "Jumlah koin minimum yang diperlukan: 2\n"
      ]
     }
    ],
